config/k8s/kafka/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: coelho-realtime-kafka-service
  labels:
    app: coelho-realtime-kafka-deployment
  namespace: default
spec:
  selector:
    app: coelho-realtime-kafka-deployment
  ports:
    - name: external
      port: 9092
      targetPort: 9092
      protocol: TCP
    - name: internal
      port: 29092
      targetPort: 29092
      protocol: TCP
    - name: controller
      port: 9093
      targetPort: 9093
      protocol: TCP
  type: ClusterIP
